add flex solution row, delete form, position items

--- a/index.html
+++ b/index.html
@@ -56,24 +56,11 @@
         <h1>SOLUÇÕES EATS FOR YOU</h1>
         <h3>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</h3>
 
-        <div class="container-solutions">
-            <h2>DELIVERY</h2>
-            <div class="Onetitle">
-            <div class="TitleDelivery">
+        <h2>DELIVERY</h2>
+
+        <div class="solutions">
+            <div class="solutions-item">
                 <h3>EATS BAG</h3>
-            </div>
-            <div class="TitleDelivery">
-                <h3>BAG TOTEM</h3>
-            </div>
-            <div class="TitleDelivery">
-                <h3>EATS LOCKER</h3>
-            </div>
-        </div>
-            <div class="solutions-delivery">
-
-
-
-
                 <img src="./assets/Imagens-com-fundo/Eats-bag.png" alt="Eats bag" />
                 <p>
                     Entrega de refeições pré
@@ -81,18 +68,21 @@
                     feitas por meio do nosso Aplicativo
                     ou WhatsApp dedicado para o
                     parceiro Alelo.
-                </p>
-
-
+                </p>   
+            </div>
+            <div class="solutions-item">
+                <h3>BAG TOTEM</h3>
                 <img src="./assets/Imagens-com-fundo/bag-totem.png" alt="Bag Totem" />
                 <p>
                     Um totem para acomodar o sistema
                     BAG e todas suas vantagens.
                     Garantindo o distânciamento social e
                     sistema auto servive.
-                </p>
-
-
+                </p> 
+            </div> 
+            
+            <div class="solutions-item">
+                <h3>EATS LOCKER</h3>  
                 <img src="/assets/Imagens-com-fundo/eats-locker.png" />
                 <p>
                     Um equipamento que garante o
@@ -101,127 +91,80 @@
                     temperatura adequada, com trava de
                     segurança e sistema auto service.
                 </p>
-
             </div>
+        </div>
 
-            <h2>PLUG N'PLAY</h2>
-            <div class="solutions-plug">
+        <h2>PLUG N'PLAY</h2>
 
-
-                <div class="H3solution">
-                    <h3>FOODBIKE</h3>
-                </div>
+        <div class="solutions">
+            <div class="solutions-item">
+                <h3>FOODBIKE</h3>
                 <img src="./assets/Imagens-com-fundo/foodbike.png" atl="Food Bike" />
-                <br>
                 <p>Ideal para parceiros que tenham
                     fluxo médio de público e/ou
                     colaboradores. Com sistema de
                     atendimento feito por um promotor
-                    Eats ou auto service.</p>
-
+                    Eats ou auto service.
+                </p>   
+            </div>
+            <div class="solutions-item">
                 <h3>FOODTRUCK</h3>
                 <img src="assets/Imagens-com-fundo/foodtruck.png" alt="Food truck" />
-                <br>
-
-                <p>Ideal para parceiros que tenham
+                <p>
+                    Ideal para parceiros que tenham
                     grande fluxo de público e/ou
                     colaboradores. Com sistema de
                     atendimento feito por um promotor
-                    Eats.</p>
-
+                    Eats.
+                </p>
+            </div>
+            <div class="solutions-item">
                 <h3>FOODCART</h3>
                 <img src="assets/Imagens-com-fundo/foodcart.png" alt="Food Cart" />
-                <br>
-
                 <p>Garante praticidade no
                     armazenamento e distribuição de
                     refeições em parceiros com pequenos
                     espaços. Com sistema de atendimento
                     feito por promotor Eats ou auto
-                    service</p>
-
-                <h2>EATS MACHINES</h2>
-                <img src="assets/Imagens-com-fundo/eats-machine.png" alt="Eat´s machine" />
-                <h3>AQUECIDAS</h3>
-
-                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
-                    com grande fluxo de colaboradores.</p>
-
-                <h3>CONGELADAS</h3>
-
-                <p>Máquina de venda automática que mantêm as
-                    refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
-                    garantir cardápio variado.</p>
-
-                <h3>REFRIGERADAS</h3>
-
-                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
-                    com fluxo médio de colaboradores e/ou público e
-                    queiram servir lanches, snacks, sucos, sobremesas e
-                    saladas.
-
+                    service.
                 </p>
             </div>
+        </div>
 
-<<<<<<< HEAD
+
+        <h2>EATS MACHINES</h2>
+
+        <div class="solutions-machines">
+            <img src="assets/Imagens-com-fundo/eats-machine.png" alt="Eat´s machine" />
+            <div class="machines-item">
+            <h3>AQUECIDAS</h3>
+            <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
+                com grande fluxo de colaboradores.
+            </p>
+            </div>
+
+            <div class="machines-item">
+            <h3>CONGELADAS</h3>
+            <p>Máquina de venda automática que mantêm as
+                refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
+                garantir cardápio variado.
+            </p>
+            </div>
+
+            <div class="machines-item">
+            <h3>REFRIGERADAS</h3>
+            <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
+                com fluxo médio de colaboradores e/ou público e
+                queiram servir lanches, snacks, sucos, sobremesas e
+                saladas.
+            </p>
+            </div>
+        </div>
+
         <div class="container-form">
             <h2>Como podemos te ajudar ?</h2>
-
-
             <h3>Informacões necessrias para o cálculo</h3>
-            
-            <form>
-                <label>Contato Comercial </label>
-                <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
-                <br>
-                <label>Nome do Consultor Alelo:</label>
-                <input type="text" id="AleloName" />
-                <br>
-                <label>Nome da Empresa:</label>
-                <input type="text" id="NomeEmpresa">
-                <br>
-                <label>Nome para Contato:</label>
-                <input type="tel" id="NomeContato" />
-                <br>
-                <label>CNPJ:</label>
-                <input type="number" id="cnpj" />
-                <br>
-                <label>Telefone:</label>
-                <input type="tel" id="Telefone">
-                <br>
-                <label>E-mail:</label>
-                <input type="email" id="Email" />
-                <br>
-                <label>Endereço:</label>
-                <input type="text" id="Endereco" />
-                <br>
-                <label>Quantidade de Funcionarios total:</label>
-                <input type="number" id="QtdFuncionarios" />
-                <br>
-                <label>Quantidade de Funcionarios presencial:</label>
-                <input type="number" id="QtsPresencial" />
-                <br>
-                <label>Valor do Beneficio </label>
-                <input type="number" id="ValBeneficio" />
-                <br>
-                <label>Prazo para implementação:</label>
-                <input type="date" id="PrazoImplemetacao">
-                <br>
-                <label>Possui oferta de refeitorio no local ?</label>
-                <br>
-                <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
-                <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
-                <br>
-                <label>A regiao possui oferta de Delivery ou restaurantes ?</label>
-                <br>
-                <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
-                <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
-            </form>
-=======
-        </div>
-        <div class="Quizpage">
-            <h2><a href="/calculadora.html">Quiz Soluções Customizadas </a></h2>]
->>>>>>> 3d5e8b751a845241cd4c5a9db3ca0c5f8c70ffba
+            button
         </div>
     </main>
     <footer>
