add button and css initial calc

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
-
     <title>Eats For You Calculadora</title>
 </head>
 
@@ -18,13 +17,10 @@
     <header>
         <img class="Imgmenu" src="./assets/eatsforyo.png" alt="Logo Eats For You">
         <br>
-
         <navigator>
         </navigator>
-
         <br>
         <ul>
-
             <li><a href="https://www.eatsforyou.com.br/100milsemfome">#100MilSemFome</a></li>
             <li>SOBRE</li>
             <li> <a href="https://www.eatsforyou.com.br/quero-vender">QUERO VENDER </a></li>
@@ -37,7 +33,10 @@
 
     </header>
     <main>
-        <h1>Quem é a Eats For You ?</h1>
+        <div class="title-main">
+            <h1>Quem é a Eats For You ?</h1>
+        </div>
+
         <div class="container-about">
             <div class="about-text">
                 <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
@@ -161,10 +160,9 @@
             </div>
         </div>
 
-        <div class="container-form">
-            <h2>Como podemos te ajudar ?</h2>
-            <h3>Informacões necessrias para o cálculo</h3>
-            button
+        <div class="container-button">
+            <h2>Acesse nossa calculadora já</h2>
+            <button name="button-info">Aperte aqui</button>
         </div>
     </main>
     <footer>
