--- a/calculadora.html
+++ b/calculadora.html
@@ -1,51 +1,60 @@
-<div class="container-form">
-    <h2>Como podemos te ajudar ?</h2>
-
-
-    <h3>Informacões necessrias para o cálculo</h3>
-
-    <form>
-        <label> Contato Comercial </label>
-        <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
-        <br>
-        <label> (Responsavel) Alelo:</label>
-        <input type="text" id="AleloName" />
-        <br>
-        <label>Nome da Empresa:</label>
-        <input type="text" id="NomeEmpresa">
-        <br>
-        <label> Nome para Contato:</label>
-        <input type="tel" id="NomeContato" />
-        <br>
-        <label>Telefone:</label>
-        <input type="tel" id="Telefone">
-        <br>
-        <label>E-mail:</label>
-        <input type="email" id="Email" />
-        <br>
-        <label>Endereço:</label>
-        <input type="text" id="Endereco" />
-        <br>
-        <label>Quantidade de Funcionarios total:</label>
-        <input type="number" id="QtdFuncionarios" />
-        <br>
-        <label>Quantidade de Funcionarios presencial:</label>
-        <input type="number" id="QtsPresencial" />
-        <br>
-        <label> Valor do Beneficio </label>
-        <input type="number" id="ValBeneficio" />
-        <br>
-        <label> Prazo para implementação:</label>
-        <input type="date" id="PrazoImplemetacao">
-        <br>
-        <label> Possui oferta de refeitorio no local ?</label>
-        <br>
-        <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
-        <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
-        <br>
-        <label> A regiao possui oferta de Delivery ou restaurantes ?</label>
-        <br>
-        <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
-        <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
-    </form>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style-calc.css" rel="stylesheet" />
+    <title>Calculadora Eats For You & Alelo</title>
+</head>
+<body>
+    <div class="container-form">
+        <h2>Como podemos te ajudar ?</h2>    
+        <h3>Informacões necessrias para o cálculo</h3>
+        <form>
+            <label> Contato Comercial </label>
+            <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
+            <br>
+            <label> (Responsavel) Alelo:</label>
+            <input type="text" id="AleloName" />
+            <br>
+            <label>Nome da Empresa:</label>
+            <input type="text" id="NomeEmpresa">
+            <br>
+            <label> Nome para Contato:</label>
+            <input type="tel" id="NomeContato" />
+            <br>
+            <label>Telefone:</label>
+            <input type="tel" id="Telefone">
+            <br>
+            <label>E-mail:</label>
+            <input type="email" id="Email" />
+            <br>
+            <label>Endereço:</label>
+            <input type="text" id="Endereco" />
+            <br>
+            <label>Quantidade de Funcionarios total:</label>
+            <input type="number" id="QtdFuncionarios" />
+            <br>
+            <label>Quantidade de Funcionarios presencial:</label>
+            <input type="number" id="QtsPresencial" />
+            <br>
+            <label> Valor do Beneficio </label>
+            <input type="number" id="ValBeneficio" />
+            <br>
+            <label> Prazo para implementação:</label>
+            <input type="date" id="PrazoImplemetacao">
+            <br>
+            <label> Possui oferta de refeitorio no local ?</label>
+            <br>
+            <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
+            <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
+            <br>
+            <label> A regiao possui oferta de Delivery ou restaurantes ?</label>
+            <br>
+            <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
+            <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
+        </form>
+    </div>
+</body>
+</html>
